--- a/playbook.yml
+++ b/playbook.yml
@@ -25,3 +25,7 @@
         name: 'vagrant'
         append: yes
         group: 'docker'
+
+    - name: disable firewall
+      ufw:
+        state: disabled
