--- a/my-rails-app/Dockerfile
+++ b/my-rails-app/Dockerfile
@@ -1,4 +1,4 @@
-FROM ruby:2.4.1
+FROM ruby:2.3-slim
 ENV LANG C.UTF-8
 RUN apt-get update -qq && apt-get install -y build-essential libpq-dev postgresql-client nodejs
 RUN gem install bundler
